...
                          Icons.contact_support_outlined,
                          color: DesignTokens.primary,
                          size: 12,
                        ),
                        const SizedBox(width: 4),
                        Text(
                          'Support',
                          style: TextStyle(
                            color: DesignTokens.primary,
                            fontSize: 10,
                            fontWeight: FontWeight.w700,
                          ),
                        ),
...
